--- a/.github/workflows/monthly_backup.yml
+++ b/.github/workflows/monthly_backup.yml
@@ -28,5 +28,10 @@ jobs:
           asset_name: cases-$$.db.zip
           asset_content_type: application/zip # required by GitHub API
 
-      - name: keepalive
-        uses: gautamkrishnar/keepalive-workflow@v1
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@v1  
